# tableaux

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/tableaux/: __init__.py  _fetchers.py  _version.py
src/tableaux/data/: registry.txt
src/tableaux/data/barrett2020/: table1.tsv  table2.tsv
src/tableaux/data/bulkeley2018/: table1.tsv
src/tableaux/data/cariola2010/: table1.tsv
src/tableaux/data/cariola2014/: table1.tsv
src/tableaux/data/hawkins2017/: table1.tsv
src/tableaux/data/mariani2023/: table1.tsv
src/tableaux/data/mcnamara2015/: table5.tsv
src/tableaux/data/meador2022/: table1.tsv
src/tableaux/data/meaklim2023/: table1.tsv
src/tableaux/data/mota2020/: tableS1.tsv
src/tableaux/data/niederhoffer2017/: table1.tsv
src/tableaux/data/paquet2020/: table1.tsv
src/tableaux/data/raffaelli2021/: table1.tsv
src/tableaux/data/zheng2023/: table1.tsv
